deploy/rpa-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpa-web-deployment
  labels:
    app: rpa-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rpa-webapp
  template:
    metadata:
      labels:
        app: rpa-webapp
    spec:
      containers:
      - name: rpa-webapp
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        resources:
          requests:
            memory: "60Mi"
            cpu: "100m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
          - name: http-port
            containerPort: 80
          - name: https-port
            containerPort: 443
