deploy/rpa-webapp-port.yaml
apiVersion: v1
kind: Service
metadata:
  name:  rpa-webapppoui-svc
spec:
  selector:
    app:  rpa-webapppoui
  type: NodePort
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
