deploy/rpa-webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpa-webapp-dev-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dev-ip
    networking.gke.io/managed-certificates: dev-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: rpa-webapppoui-svc
      port:
        number: 80
